devops/kubernetes/looqbox-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  looqbox-backend-deployment
  namespace: looqbox-backend-ns
  labels:
    app: looqbox-backend-deployment
spec:
  selector:
    matchLabels:
      app: looqbox-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: looqbox-backend
    spec:
      containers:
      - name: looqbox-backend
        image: looqboxbackend:latest
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 300m
            memory: 350Mi
          limits:
            cpu: 650m
            memory: 750Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 15
        ports:
        - containerPort: 8080
