devops/kubernetes/looqbox-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: looqbox-backend-ingress
  labels:
    app: looqbox-backend-ingress
  namespace: looqbox-backend-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: api.looqchallenge.com
    http:
      paths:
      - pathType: Prefix
        path: "/v1(/|$)(.*)"
        backend:
          service:
            name: looqbox-backend-service
            port: 
              name: default
